--- a/k8s/application/configmap.yaml
+++ b/k8s/application/configmap.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: contact-app
 data:
-  DB_HOST: "postgres_db"
+  DB_HOST: "postgres-service"
   DB_PORT: "5432"
   POSTGRES_DB: "postgres"
   DB_USERNAME: "postgres"
